--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 440px) {
+@media only screen and (min-width: 1001px) {
 	a {
 	  text-decoration: none;
 	}
@@ -8,6 +8,7 @@
 		width:auto;
 		height:58px;
 		background:#000;
+		z-index:99;
 	}
 
 	ul {
@@ -15,6 +16,7 @@
 		list-style: none;
 		margin: 0;
 		padding-left: 0;
+		z-index:99;
 	}
 
 	li {
@@ -26,6 +28,7 @@
 		text-decoration: none;
 		transition-duration: 0.5s;
 		font-size:23px;
+		z-index:99;
 	}
 	  
 	li a {
@@ -55,6 +58,7 @@
 		margin-top: 1rem;
 		left: 0;
 		display: none;
+		z-index:99;
 	}
 
 	ul li:hover > ul, ul li:focus-within > ul, ul li ul:hover, ul li ul:focus {
@@ -66,6 +70,7 @@
 	ul li ul li {
 		clear: both;
 		width: 100%;
+		z-index:99;
 	}
 	
 	#logo {
@@ -73,6 +78,179 @@
 		top:0px;
 		right:0px;
 		height:80px;
+	}
+	
+	body {
+		background-color:#000;
+	}
+
+	* {box-sizing:border-box}
+
+	.slideshow-container {
+		max-width: 1000px;
+		position: relative;
+		margin: auto;
+	}
+
+	.mySlides {
+		display: none;
+	}
+
+	.prev, .next {
+		cursor: pointer;
+		position: absolute;
+		top: 50%;
+		width: auto;
+		margin-top: -22px;
+		padding: 16px;
+		color: white;
+		font-weight: bold;
+		font-size: 18px;
+		transition: 0.6s ease;
+		border-radius: 0 3px 3px 0;
+		user-select: none;
+	}
+
+	.next {
+		right: 0;
+		border-radius: 3px 0 0 3px;
+	}
+
+	.prev:hover, .next:hover {
+		background-color: rgba(0,0,0,0.8);
+	}
+
+	.text {
+		color: #f2f2f2;
+		font-size: 15px;
+		padding: 8px 12px;
+		position: absolute;
+		bottom: 8px;
+		width: 100%;
+		text-align: center;
+	}
+
+	.numbertext {
+		color: #f2f2f2;
+		font-size: 12px;
+		padding: 8px 12px;
+		position: absolute;
+		top: 0;
+	}
+
+	.dot {
+		cursor: pointer;
+		height: 15px;
+		width: 15px;
+		margin: 0 2px;
+		background-color: #bbb;
+		border-radius: 50%;
+		display: inline-block;
+		transition: background-color 0.6s ease;
+	}
+
+	.active, .dot:hover {
+		background-color: #717171;
+	}
+
+	.fade {
+		-webkit-animation-name: fade;
+		-webkit-animation-duration: 1.5s;
+		animation-name: fade;
+		animation-duration: 1.5s;
+	}
+
+	@-webkit-keyframes fade {
+		from {opacity: .4}
+		to {opacity: 1}
+	}
+
+	@keyframes fade {
+		from {opacity: .4}
+		to {opacity: 1}
+	}		
+}
+
+@media only screen and (max-width: 1000px) {
+	a {
+	  text-decoration: none;
+	}
+
+	nav {
+		font-family: CorporateSRegular, "Helvetica Neue", Helvetica, Arial, sans-serif;
+		width:auto;
+		height:200px;
+		background:#000;
+		z-index:99;
+	}
+
+	ul {
+		background: #000;
+		list-style: none;
+		margin: 0;
+		padding-left: 0;
+		z-index:99;
+	}
+
+	li {
+		background: #000;
+		display: block;
+		float: left;
+		padding: 1rem;
+		position: relative;
+		text-decoration: none;
+		transition-duration: 0.5s;
+		font-size:50px;
+		z-index:99;
+	}
+	  
+	li a {
+		color: #fff;
+	}
+
+	li:hover, li:focus-within {
+		background: #0ca597;
+		cursor: pointer;
+	}
+	
+	li:hover a {
+		color:rgba(218,222,229,1);
+	}
+
+	li:focus-within a {
+		outline: none;
+	}
+
+	ul li ul {
+		background: rgba(218,222,229,1);
+		visibility: hidden;
+		opacity: 0;
+		min-width: 5rem;
+		position: absolute;
+		transition: all 0.5s ease;
+		margin-top: 1rem;
+		left: 0;
+		display: none;
+		z-index:99;
+	}
+
+	ul li:hover > ul, ul li:focus-within > ul, ul li ul:hover, ul li ul:focus {
+		visibility: visible;
+		opacity: 1;
+		display: block
+	}
+
+	ul li ul li {
+		clear: both;
+		width: 100%;
+		z-index:99;
+	}
+	
+	#logo {
+		position:absolute;
+		top:0px;
+		right:0px;
+		height:110px;
 	}
 	
 	body {
