--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,24 @@
 @media only screen and (min-width: 1001px) {
 	a {
-	  text-decoration: none;
+		text-decoration: none;
 	}
-
+	
+	h1 {
+		font-family: CorporateSRegular, "Helvetica Neue", Helvetica, Arial, sans-serif;
+		color: #fff;
+	}
+	
+	h4 {
+		font-family: CorporateSDemi, Helvetica, Arial, sans-serif;
+		color: #fff;
+	}
+	
+	p {
+		font-family: CorporateSRegular, "Helvetica Neue", Helvetica, Arial, sans-serif;
+		color: #fff;
+	}
+	
+	
 	nav {
 		font-family: CorporateSRegular, "Helvetica Neue", Helvetica, Arial, sans-serif;
 		width:auto;
@@ -78,6 +94,13 @@
 		top:0px;
 		right:0px;
 		height:80px;
+	}
+	
+	#homeimg {
+		float: right;
+		height:auto;
+		width:50%;
+		margin-right:125px;
 	}
 	
 	body {
@@ -172,6 +195,21 @@
 }
 
 @media only screen and (max-width: 1000px) {
+	h1 {
+		font-family: CorporateSRegular, "Helvetica Neue", Helvetica, Arial, sans-serif;
+		color: #fff;
+	}
+	
+	h4 {
+		font-family: CorporateSDemi, Helvetica, Arial, sans-serif;
+		color: #fff;
+	}
+	
+	p {
+		font-family: CorporateSRegular, "Helvetica Neue", Helvetica, Arial, sans-serif;
+		color: #fff;
+	}
+	
 	a {
 	  text-decoration: none;
 	}
@@ -251,6 +289,11 @@
 		top:0px;
 		right:0px;
 		height:110px;
+	}
+	
+	#homeimg {
+		height:auto;
+		width:100%;
 	}
 	
 	body {
