Added about page

--- a/src/style.css
+++ b/src/style.css
@@ -11,13 +11,20 @@
 	h4 {
 		font-family: CorporateSDemi, Helvetica, Arial, sans-serif;
 		color: #fff;
+		font-size:1.3em;
+	}
+	
+	h2 {
+		font-family: CorporateSDemi, Helvetica, Arial, sans-serif;
+		border-top:3px solid white;
+		color: #fff;
 	}
 	
 	p {
 		font-family: CorporateSRegular, "Helvetica Neue", Helvetica, Arial, sans-serif;
 		color: #fff;
+		margin-left:10px;
 	}
-	
 	
 	nav {
 		font-family: CorporateSRegular, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -99,9 +106,24 @@
 	#homeimg {
 		float: right;
 		height:auto;
-		width:50%;
+		width:40%;
 		margin-right:125px;
 	}
+	
+	#frontimg{
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		width: 50%;
+	}
+	
+	#sideimg{
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		width: 45%;
+	}
+
 	
 	body {
 		background-color:#000;
@@ -145,12 +167,14 @@
 
 	.text {
 		color: #f2f2f2;
-		font-size: 15px;
+		font-size: 1.5em;
 		padding: 8px 12px;
 		position: absolute;
 		bottom: 8px;
 		width: 100%;
 		text-align: center;
+		font-family: CorporateSRegular, "Helvetica Neue", Helvetica, Arial, sans-serif;
+		background:rgba(0,0,0,0.8);
 	}
 
 	.numbertext {
@@ -192,6 +216,23 @@
 		from {opacity: .4}
 		to {opacity: 1}
 	}		
+	.container {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		border:3px solid white;
+	}
+
+	.item {
+	  width: 48%;
+	  height: 30%;
+	  margin-bottom: 2%;
+	  position:relative;
+	}
+
+	.item:nth-child(3n+1) {
+	  width: 100%;
+	}
 }
 
 @media only screen and (max-width: 1000px) {
@@ -203,6 +244,14 @@
 	h4 {
 		font-family: CorporateSDemi, Helvetica, Arial, sans-serif;
 		color: #fff;
+		font-size:1.2em;
+	}
+	
+	h2 {
+		font-family: CorporateSDemi, Helvetica, Arial, sans-serif;
+		color: #fff;
+		font-size:2em;
+		border-top:5px solid white;
 	}
 	
 	p {
@@ -296,6 +345,20 @@
 		width:100%;
 	}
 	
+	#frontimg{
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		width: 100%;
+	}
+	
+	#sideimg{
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		width: 100%;
+	}
+
 	body {
 		background-color:#000;
 	}
@@ -338,12 +401,14 @@
 
 	.text {
 		color: #f2f2f2;
-		font-size: 15px;
+		font-size: 0.8em;
 		padding: 8px 12px;
 		position: absolute;
 		bottom: 8px;
 		width: 100%;
 		text-align: center;
+		font-family: CorporateSRegular, "Helvetica Neue", Helvetica, Arial, sans-serif;
+		background:rgba(0,0,0,0.8);
 	}
 
 	.numbertext {
@@ -384,7 +449,23 @@
 	@keyframes fade {
 		from {opacity: .4}
 		to {opacity: 1}
-	}		
+	}	
+	
+	.container {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
 
+	.item {
+	  width: 48%;
+	  height: 30%;
+	  margin-bottom: 2%;
+	  position:relative;
+	}
 
+	.item:nth-child(3n+1) {
+	  width: 100%;
+	}
+}	
 }
