--- a/src/style.css
+++ b/src/style.css
@@ -16,8 +16,8 @@
 	
 	h2 {
 		font-family: CorporateSDemi, Helvetica, Arial, sans-serif;
-		border-top:3px solid white;
-		color: #fff;
+		color: #000;
+		margin-left:75px;
 	}
 	
 	p {
@@ -110,20 +110,19 @@
 		margin-right:125px;
 	}
 	
-	#frontimg{
-		display: block;
-		margin-left: auto;
-		margin-right: auto;
-		width: 50%;
+	#about {
+		background-color:#fff;
 	}
 	
-	#sideimg{
-		display: block;
-		margin-left: auto;
-		margin-right: auto;
-		width: 45%;
+	#imgtext {
+		position:absolute;
+		top:15px;
+		left:10px;
+		font-family: CorporateSRegular, "Helvetica Neue", Helvetica, Arial, sans-serif;
+		color: #fff;
+		font-size:2em;
+		border-top:2px solid white;
 	}
-
 	
 	body {
 		background-color:#000;
@@ -219,20 +218,21 @@
 	.container {
 		display: flex;
 		flex-wrap: wrap;
-		justify-content: space-between;
-		border:3px solid white;
+		justify-content: flex-start;
 	}
 
 	.item {
-	  width: 48%;
-	  height: 30%;
-	  margin-bottom: 2%;
-	  position:relative;
+		margin-bottom: 2%;
+		margin-left:15px;
+		position:relative;
 	}
-
-	.item:nth-child(3n+1) {
-	  width: 100%;
+	
+	.niki {
+		margin-bottom: 2%;
+		margin-left:15px;
+		position:relative;
 	}
+	
 }
 
 @media only screen and (max-width: 1000px) {
@@ -249,9 +249,9 @@
 	
 	h2 {
 		font-family: CorporateSDemi, Helvetica, Arial, sans-serif;
-		color: #fff;
+		color: #000;
 		font-size:2em;
-		border-top:5px solid white;
+		border-top:5px solid black;
 	}
 	
 	p {
@@ -345,20 +345,24 @@
 		width:100%;
 	}
 	
-	#frontimg{
-		display: block;
-		margin-left: auto;
-		margin-right: auto;
-		width: 100%;
-	}
-	
-	#sideimg{
-		display: block;
-		margin-left: auto;
-		margin-right: auto;
-		width: 100%;
+	#about {
+		background-color:#fff;
 	}
 
+	#drivers {
+		width:100%;
+	}
+	
+	#imgtext {
+		position:absolute;
+		top:15px;
+		left:10px;
+		font-family: CorporateSRegular, "Helvetica Neue", Helvetica, Arial, sans-serif;
+		color: #fff;
+		font-size:2em;
+		border-top:2px solid white;
+	}
+	
 	body {
 		background-color:#000;
 	}
@@ -454,18 +458,21 @@
 	.container {
 		display: flex;
 		flex-wrap: wrap;
-		justify-content: space-between;
+		justify-content: flex-start;
 	}
 
 	.item {
-	  width: 48%;
-	  height: 30%;
-	  margin-bottom: 2%;
-	  position:relative;
+		margin-bottom: 2%;
+		margin-left:0px;
+		position:relative;
+		width:100%;
 	}
 
-	.item:nth-child(3n+1) {
-	  width: 100%;
+	.niki {
+		margin-bottom: 2%;
+		margin-left:0px;
+		position:relative;
+		width:100%;
 	}
+	
 }	
-}
