--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,9 @@
 	h1 {
 		font-family: CorporateSRegular, "Helvetica Neue", Helvetica, Arial, sans-serif;
 		color: #fff;
+		font-size: 2rem;
+		margin: 1rem;
+		font-weight: bold;
 	}
 	
 	h4 {
@@ -233,12 +236,56 @@
 		position:relative;
 	}
 	
+	#gallery {
+		font-family: Helvetica, Arial, sans-serif;
+		margin: 0 auto;
+		max-width: 700px;
+		width: 100%;
+	}
+	
+	#galerie {
+		width: 100%;
+		height: 400px;
+		object-fit: cover;
+	}
+	
+	#paragrafgal{
+		font-size:1em;
+		color:black;
+	}
+	
+	strong { 
+		font-weight: bold; 
+	}
+	.grid {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-around;
+		width: 100%;
+	}
+	figure {
+		margin: 1rem;
+		position: relative;
+	}
+	figcaption {
+		background: rgba(250,250,250, .8);
+		bottom: 0;
+		box-sizing: border-box;
+		position: absolute;
+		width: 100%;
+		height:35%;
+		padding: 1rem;
+	}
 }
 
 @media only screen and (max-width: 1000px) {
 	h1 {
 		font-family: CorporateSRegular, "Helvetica Neue", Helvetica, Arial, sans-serif;
 		color: #fff;
+		font-size: 4em;
+		margin: 1rem;
+		font-weight: bold;
+		border-top:5px solid white;
 	}
 	
 	h4 {
@@ -473,6 +520,45 @@
 		margin-left:0px;
 		position:relative;
 		width:100%;
+	}
+	
+	#gallery {
+		font-family: Helvetica, Arial, sans-serif;
+		margin: 0 auto;
+		max-width: 1000px;
+		width: 100%;
+		height:auto;
+	}
+	
+	#galerie {
+		width: 100%;
+		height: auto;
+		object-fit: cover;
+	}
+	
+	#paragrafgal{
+		color:white;
+	}
+	
+	strong { 
+		font-weight: bold;
+		color:white;
+	}
+	.grid {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-around;
+		width: 100%;
+	}
+	figure {
+		margin: 1rem;
+		position: relative;
+	}
+	figcaption {
+		font-size:1.5em;
+		bottom: 0;
+		padding: 0rem;
+		color:white;
 	}
 	
 }	
