--- a/src/style.css
+++ b/src/style.css
@@ -239,13 +239,13 @@
 	#gallery {
 		font-family: Helvetica, Arial, sans-serif;
 		margin: 0 auto;
-		max-width: 700px;
+		max-width: 1000px;
 		width: 100%;
 	}
 	
 	#galerie {
 		width: 100%;
-		height: 400px;
+		height: auto;
 		object-fit: cover;
 	}
 	
@@ -268,13 +268,17 @@
 		position: relative;
 	}
 	figcaption {
+		visibility:hidden;
 		background: rgba(250,250,250, .8);
 		bottom: 0;
 		box-sizing: border-box;
 		position: absolute;
 		width: 100%;
-		height:35%;
+		height:27%;
 		padding: 1rem;
+	}
+	figure:hover > figcaption{
+		visibility:visible;
 	}
 }
 
@@ -385,6 +389,287 @@
 		top:0px;
 		right:0px;
 		height:110px;
+	}
+	
+	#homeimg {
+		height:auto;
+		width:100%;
+	}
+	
+	#about {
+		background-color:#fff;
+	}
+
+	#drivers {
+		width:100%;
+	}
+	
+	#imgtext {
+		position:absolute;
+		top:15px;
+		left:10px;
+		font-family: CorporateSRegular, "Helvetica Neue", Helvetica, Arial, sans-serif;
+		color: #fff;
+		font-size:2em;
+		border-top:2px solid white;
+	}
+	
+	body {
+		background-color:#000;
+	}
+
+	* {box-sizing:border-box}
+
+	.slideshow-container {
+		max-width: 1000px;
+		position: relative;
+		margin: auto;
+	}
+
+	.mySlides {
+		display: none;
+	}
+
+	.prev, .next {
+		cursor: pointer;
+		position: absolute;
+		top: 50%;
+		width: auto;
+		margin-top: -22px;
+		padding: 16px;
+		color: white;
+		font-weight: bold;
+		font-size: 18px;
+		transition: 0.6s ease;
+		border-radius: 0 3px 3px 0;
+		user-select: none;
+	}
+
+	.next {
+		right: 0;
+		border-radius: 3px 0 0 3px;
+	}
+
+	.prev:hover, .next:hover {
+		background-color: rgba(0,0,0,0.8);
+	}
+
+	.text {
+		color: #f2f2f2;
+		font-size: 1.8em;
+		padding: 8px 12px;
+		position: absolute;
+		bottom: 8px;
+		width: 100%;
+		text-align: center;
+		font-family: CorporateSRegular, "Helvetica Neue", Helvetica, Arial, sans-serif;
+		background:rgba(0,0,0,0.8);
+	}
+
+	.numbertext {
+		color: #f2f2f2;
+		font-size: 12px;
+		padding: 8px 12px;
+		position: absolute;
+		top: 0;
+	}
+
+	.dot {
+		cursor: pointer;
+		height: 15px;
+		width: 15px;
+		margin: 0 2px;
+		background-color: #bbb;
+		border-radius: 50%;
+		display: inline-block;
+		transition: background-color 0.6s ease;
+	}
+
+	.active, .dot:hover {
+		background-color: #717171;
+	}
+
+	.fade {
+		-webkit-animation-name: fade;
+		-webkit-animation-duration: 1.5s;
+		animation-name: fade;
+		animation-duration: 1.5s;
+	}
+
+	@-webkit-keyframes fade {
+		from {opacity: .4}
+		to {opacity: 1}
+	}
+
+	@keyframes fade {
+		from {opacity: .4}
+		to {opacity: 1}
+	}	
+	
+	.container {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: flex-start;
+	}
+
+	.item {
+		margin-bottom: 2%;
+		margin-left:0px;
+		position:relative;
+		width:100%;
+	}
+
+	.niki {
+		margin-bottom: 2%;
+		margin-left:0px;
+		position:relative;
+		width:100%;
+	}
+	
+	#gallery {
+		font-family: Helvetica, Arial, sans-serif;
+		margin: 0 auto;
+		max-width: 1000px;
+		width: 100%;
+		height:auto;
+	}
+	
+	#galerie {
+		width: 100%;
+		height: auto;
+		object-fit: cover;
+	}
+	
+	#paragrafgal{
+		color:white;
+	}
+	
+	strong { 
+		font-weight: bold;
+		color:white;
+	}
+	.grid {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-around;
+		width: 100%;
+	}
+	figure {
+		margin: 1rem;
+		position: relative;
+	}
+	figcaption {
+		font-size:1.5em;
+		bottom: 0;
+		padding: 0rem;
+		color:white;
+	}
+}	
+
+@media only screen and (max-width: 640px) {
+	h1 {
+		font-family: CorporateSRegular, "Helvetica Neue", Helvetica, Arial, sans-serif;
+		color: #fff;
+		font-size: 4em;
+		margin: 1rem;
+		font-weight: bold;
+		border-top:5px solid white;
+	}
+	
+	h4 {
+		font-family: CorporateSDemi, Helvetica, Arial, sans-serif;
+		color: #fff;
+		font-size:1.2em;
+	}
+	
+	h2 {
+		font-family: CorporateSDemi, Helvetica, Arial, sans-serif;
+		color: #000;
+		font-size:2em;
+		border-top:5px solid black;
+	}
+	
+	p {
+		font-family: CorporateSRegular, "Helvetica Neue", Helvetica, Arial, sans-serif;
+		color: #fff;
+	}
+	
+	a {
+	  text-decoration: none;
+	}
+
+	nav {
+		font-family: CorporateSRegular, "Helvetica Neue", Helvetica, Arial, sans-serif;
+		width:auto;
+		height:131px;
+		background:#000;
+		z-index:99;
+	}
+
+	ul {
+		background: #000;
+		list-style: none;
+		margin: 0;
+		padding-left: 0;
+		z-index:99;
+	}
+
+	li {
+		background: #000;
+		display: block;
+		float: left;
+		padding: 1rem;
+		position: relative;
+		text-decoration: none;
+		transition-duration: 0.5s;
+		font-size:1.8em;
+		z-index:99;
+	}
+	  
+	li a {
+		color: #fff;
+	}
+
+	li:hover, li:focus-within {
+		background: #0ca597;
+		cursor: pointer;
+	}
+	
+	li:hover a {
+		color:rgba(218,222,229,1);
+	}
+
+	li:focus-within a {
+		outline: none;
+	}
+
+	ul li ul {
+		background: rgba(218,222,229,1);
+		visibility: hidden;
+		opacity: 0;
+		min-width: 5rem;
+		position: absolute;
+		transition: all 0.5s ease;
+		margin-top: 1rem;
+		left: 0;
+		display: none;
+		z-index:99;
+	}
+
+	ul li:hover > ul, ul li:focus-within > ul, ul li ul:hover, ul li ul:focus {
+		visibility: visible;
+		opacity: 1;
+		display: block
+	}
+
+	ul li ul li {
+		clear: both;
+		width: 100%;
+		z-index:99;
+	}
+	
+	#logo {
+		visibility: hidden;
 	}
 	
 	#homeimg {
