Fixed Link Color

--- a/src/style.css
+++ b/src/style.css
@@ -361,7 +361,8 @@
 	}
 	
 	a {
-	  text-decoration: none;
+		text-decoration: none;
+		color:#0ca597;
 	}
 
 	nav {
@@ -687,7 +688,8 @@
 	}
 	
 	a {
-	  text-decoration: none;
+		text-decoration: none;
+		color:#0ca597;
 	}
 
 	nav {
